# congruence-class-calculator

./: CMakeLists.txt  main.cpp  polynomial_division.sh
libCongruenceClass/: CMakeLists.txt  Calculations.h
libLaTeXConverter/: CMakeLists.txt  PolynomialConversionToLatex.h
libPolynomial/: CMakeLists.txt  Monomial.h  Polynomial.h  PolynomialDivision.h
libPolynomialOperations/: CMakeLists.txt  PolynomialOperations.h
libStringUtils/: CMakeLists.txt  StringUtils.h
